# mlops-zoomcamp

./: .gitignore
cohorts/2023/01-intro/: homework_Bekzhan.ipynb
homeworks/02b-week/: homework_answers.txt
homeworks/02b-week/homework-wandb/: sweep.py
homeworks/04-week/homework/: Dockerfile
homeworks/05-week/dashboards/: fare_amount_quantile.json
homeworks/06-week/: docker-compose.yaml  integration_test.py
homeworks/06-week/tests/: test_batch.py
homeworks/07-project/: docker-compose.yaml
homeworks/07-project/infrastructure/: main.tf
homeworks/07-project/script/: train.py
homeworks/2023/01-week/: homework_Bekzhan.ipynb
homeworks/2023/02a-week/: homework_week_02.txt
homeworks/2023/03-week/: requirements.txt
homeworks/2023/05-week/: baseline_model_nyc_taxi_data.ipynb
homeworks/2023/06-week/: answers.txt  batch.py
homeworks/2023/07-project/: Pipfile  analysis.ipynb  plan.md
homeworks/2025/01-intro/: answers.md  homework.ipynb  pyproject.toml
homeworks/2025/03-orchestration/: answer.md  (+1 more)
homeworks/2025/05-monitoring/: answers.md  evidently_metrics_calculation.py  pyproject.toml  requirements.txt
homeworks/2025/05-monitoring/dashboards/: quantile_value.json
homeworks/2025/06-best-practices/: answers.md  docker-compose.yaml  pyproject.toml
homeworks/2025/06-best-practices/src/: batch.py
homeworks/2025/06-best-practices/tests/: test_batch.py  test_integration.py
homeworks/week 4/: homework_answers.txt
homeworks/week_3/: .gitignore  homework.txt  orchestrate_markdown.py
homeworks/week_5/: answers.txt  evidently_metrics_calculation.py
(+60 files in other folders)
