[project]
name = "05-monitoring"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "evidently>=0.7.8",
    "joblib>=1.5.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "prefect>=3.4.6",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9",
    "pyarrow>=20.0.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "tqdm>=4.67.1",
]
